Add BGE nqtrain retrieval results and nq_train.json
- Add BGE_nqtrain_all.res and normalized version (367MB + 359MB)
- Add nq_train.json (131MB) tracked with LFS
- Add OpenShift job manifests for nqtrain retrieval
- Update scripts with consistent formatting

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ data/dpr-nq/**/*.res filter=lfs diff=lfs merge=lfs -text
 data/dpr-nq/**/*.jsonl filter=lfs diff=lfs merge=lfs -text
 data/dpr-nq/**/*.json filter=lfs diff=lfs merge=lfs -text
 data/dpr-nq/**/*.qpp filter=lfs diff=lfs merge=lfs -text
+data/nq_train.json filter=lfs diff=lfs merge=lfs -text
